--- a/views/layout.mustache
+++ b/views/layout.mustache
@@ -2,24 +2,29 @@
 <head>
 <link rel="stylesheet" href="/stylesheets/style.css"></link>
 <script type="text/javascript">
-	//Cufon.replace('p'); // Works without a selector engine
 window.onload = function() {
-	document.getElementById('embed').select();
-}
+	var textArea = document.getElementById('embed');
+	textArea.addEventListener('click',function() {
+		textArea.select();
+	});
+	textArea.select();
 
+}
 </script>
 <script src="http://use.edgefonts.net/league-gothic.js"></script>
+<meta name="twitter:card" content="summary">
+<meta name="twitter:description" content="{{name}}">
+<meta name="twitter:image" content="{{name}}">
 </head>
 <body>
 	<div>
-		<canvas id="e" width="400" height="70" style="height:100px;width:400px;"></canvas>
 		<img src="/images/white_van.gif"/>
 		<p>{{name}}<br />
 		{{street}}<br />
 		{{city}}, {{state}} {{zip}}
 		</p>
 	</div>
-	<h1>VAN PERMALINK</h1>
-	<textarea id="embed" style='width:200px;height:18px;'>http://localhost:3000/i/{{dot}}</textarea>
+	<h1>PERMALINK VAN</h1>
+	<textarea id="embed" style='width:200px;height:18px;'>{{host}}/van/{{dot}}</textarea>
 </body>
 </html>
