--- a/views/layout.mustache
+++ b/views/layout.mustache
@@ -1,30 +1,25 @@
 <html>
 <head>
+<title>VAN: {{name}}</title>
 <link rel="stylesheet" href="/stylesheets/style.css"></link>
 <script type="text/javascript">
 window.onload = function() {
-	var textArea = document.getElementById('embed');
-	textArea.addEventListener('click',function() {
-		textArea.select();
-	});
-	textArea.select();
-
+	var input = document.getElementById('embed');
+	input.addEventListener('click',function() {
+		input.select();
+	},true);
+	input.select();
 }
 </script>
-<script src="http://use.edgefonts.net/league-gothic.js"></script>
 <meta name="twitter:card" content="summary">
 <meta name="twitter:description" content="{{name}}">
-<meta name="twitter:image" content="{{name}}">
+<meta name="twitter:image" content="/image/{{dot}}">
 </head>
 <body>
-	<div>
-		<img src="/images/white_van.gif"/>
-		<p>{{name}}<br />
-		{{street}}<br />
-		{{city}}, {{state}} {{zip}}
-		</p>
-	</div>
-	<h1>PERMALINK VAN</h1>
-	<textarea id="embed" style='width:200px;height:18px;'>{{host}}/van/{{dot}}</textarea>
+	<a href="/"><img width="630" height="324" src="/image/{{dot}}"/></a>
+	<input id="embed" value="{{host}}/van/{{dot}}">
+	<p>{{name}}</p>
+	<p>{{street}}</p>
+	<p>{{city}}, {{state}} {{zip}}</p>
 </body>
 </html>
