--- a/views/layout.mustache
+++ b/views/layout.mustache
@@ -12,6 +12,7 @@ window.onload = function() {
 }
 </script>
 <meta name="twitter:card" content="summary">
+<meta name="twitter:title" content="{{name}}">
 <meta name="twitter:description" content="{{name}}">
 <meta name="twitter:image" content="/image/{{dot}}">
 </head>
