--- a/views/layout.mustache
+++ b/views/layout.mustache
@@ -13,8 +13,8 @@ window.onload = function() {
 </script>
 <meta name="twitter:card" content="summary">
 <meta name="twitter:title" content="{{name}}">
-<meta name="twitter:description" content="{{name}}">
-<meta name="twitter:image" content="/image/{{dot}}">
+<meta name="twitter:description" content="{{name}}, {{street}}, {{city}}, {{state}} {{zip}}">
+<meta name="twitter:image" content="{{{host}}}/image/{{dot}}">
 </head>
 <body>
 	<a href="/"><img width="630" height="324" src="/image/{{dot}}"/></a>
