--- a/views/layout.mustache
+++ b/views/layout.mustache
@@ -14,7 +14,7 @@ window.onload = function() {
 <meta name="twitter:card" content="summary">
 <meta name="twitter:title" content="{{name}}">
 <meta name="twitter:description" content="{{name}}, {{street}}, {{city}}, {{state}} {{zip}}">
-<meta name="twitter:image" content="{{{host}}}/image/{{dot}}">
+<meta name="twitter:image" content="{{{host}}}/image/{{dot}}/small">
 </head>
 <body>
 	<a href="/"><img width="630" height="324" src="/image/{{dot}}"/></a>
