--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,7 +4,7 @@
 }
 body {
   padding: 50px;
-  font: 24px league-gothic,serif;
+  font: 30px league-gothic,serif;
   letter-spacing: 0px;
   text-align: center;
 }
@@ -16,22 +16,23 @@ img {
 	margin:0 auto;
 	display: block;
 }
+p, input {
+	width:340px;
+	color:#000;
+}
 p {
-	width: 300px;
 	margin:5px auto;
 	padding:0;
 	text-align: left;
-	line-height: 22px;
-	color:#EEE;
+	line-height: 27px;
 }
 input {
 	margin:0 auto;
 	border:0;
-	font: 24px league-gothic,serif;
-	color:#EEE;
-	line-height: 27px;
-	height:30px;
-	width:300px;
+	font: 30px league-gothic,serif;
+	line-height: 35px;
+	height:35px;
+	outline:0;
 }
 
 h1 {
